fix table centering

--- a/ui.tmpl
+++ b/ui.tmpl
@@ -29,6 +29,7 @@
             table {
                 border-spacing: 0px;
                 font-family: monospace;
+                margin: auto;
             }
             table th, table td {
                 padding: 5px 10px;
